--- a/booking.html
+++ b/booking.html
@@ -57,9 +57,24 @@
                     style="width: 100%; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: 0.5rem;">
             </div>
 
+            <div class="mb-4">
+                <label for="duration" style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Duration</label>
+                <select id="duration"
+                    style="width: 100%; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: 0.5rem;">
+                    <option value="Daily">Daily</option>
+                    <option value="Weekly">Weekly</option>
+                    <option value="Monthly">Monthly</option>
+                    <option value="Yearly">Yearly</option>
+                </select>
+            </div>
+
             <button type="submit" class="btn btn-primary btn-block">Proceed to Payment</button>
         </form>
     </div>
+
+    <footer class="footer">
+        <p>&copy; 2026 Park Pal Swift. All rights reserved.</p>
+    </footer>
 
     <script src="js/booking.js"></script>
 </body>
