feat: Add user authentication, expand parking slot types, and rebrand application to SmartPark.

--- a/booking.html
+++ b/booking.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Park Pal Swift - Booking</title>
+    <title>SmartPark - Booking</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -13,14 +13,13 @@
 
     <nav class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="Park Pal Swift Logo">
-            PARK PAL SWIFT
+            <img src="images/logo.png" alt="SmartPark Logo">
+            SmartPark
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="booking.html" class="active">Booking</a>
-            <a href="payment.html">Payment</a>
-            <a href="admin.html">Admin</a>
+            <a href="login.html">Login</a>
         </div>
     </nav>
 
@@ -73,7 +72,7 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; 2026 Park Pal Swift. All rights reserved.</p>
+        <p>&copy; 2026 SmartPark. All rights reserved.</p>
     </footer>
 
     <script src="js/booking.js"></script>
