--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Park Pal Swift - Home</title>
+    <title>SmartPark - Home</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +17,13 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="Park Pal Swift Logo">
-            PARK PAL SWIFT
+            <img src="images/logo.png" alt="SmartPark Logo">
+            SmartPark
         </div>
         <div class="nav-links">
             <a href="index.html" class="active">Home</a>
             <a href="booking.html">Booking</a>
-            <a href="payment.html">Payment</a>
-            <a href="admin.html">Admin</a>
+            <a href="login.html">Login</a>
         </div>
     </nav>
 
@@ -57,7 +56,7 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; 2026 Park Pal Swift. All rights reserved.</p>
+        <p>&copy; 2026 SmartPark. All rights reserved.</p>
     </footer>
 
     <script src="js/slots.js"></script>
