--- a/payment.html
+++ b/payment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Park Pal Swift - Payment</title>
+    <title>SmartPark - Payment</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -13,8 +13,8 @@
 
     <nav class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="Park Pal Swift Logo">
-            PARK PAL SWIFT
+            <img src="images/logo.png" alt="SmartPark Logo">
+            SmartPark
         </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
@@ -62,7 +62,7 @@
     </div>
 
     <footer class="footer">
-        <p>&copy; 2026 Park Pal Swift. All rights reserved.</p>
+        <p>&copy; 2026 SmartPark. All rights reserved.</p>
     </footer>
 
     <script>
