feat: Add parking slot display, user/admin login tabs, and core authentication logic with new styling.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,24 @@
         </div>
     </nav>
 
+    <!-- Hero Section -->
+    <div class="hero">
+        <div class="hero-content">
+            <h1>Find Your Perfect Spot</h1>
+            <p>Real-time availability for all vehicle types. Park smarter, faster.</p>
+        </div>
+    </div>
+
     <!-- Main Content -->
     <div class="container">
-        <div class="text-center mb-4">
-            <h1>Parking Slot Availability</h1>
-            <p class="text-light">Select an available slot to book your parking.</p>
+
+        <!-- Controls -->
+        <div class="toggle-container">
+            <span style="font-weight: 600; color: var(--text-color);">Show Available Only</span>
+            <label class="switch">
+                <input type="checkbox" id="availability-toggle">
+                <span class="slider"></span>
+            </label>
         </div>
 
         <!-- Legend -->
