--- a/login.html
+++ b/login.html
@@ -24,37 +24,49 @@
         </div>
     </nav>
 
-    <div class="container" style="max-width: 400px; margin-top: 5rem;">
-        <div class="text-center mb-4">
-            <h1>Welcome Back</h1>
-            <p class="text-light">Login to access your dashboard.</p>
-        </div>
+    <div class="container" style="max-width: 450px; margin-top: 5rem;">
 
-        <form id="login-form"
+        <div class="auth-card"
             style="background: white; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);">
-            <div id="error-msg" class="text-danger mb-4 text-center" style="display: none; color: var(--danger-color);">
+
+            <!-- Tabs -->
+            <div class="auth-tabs" style="display: flex; margin-bottom: 2rem; border-bottom: 2px solid #e2e8f0;">
+                <button id="tab-user" class="active" onclick="switchTab('user')"
+                    style="flex: 1; padding: 1rem; border: none; background: none; font-weight: 600; color: var(--text-color); cursor: pointer; border-bottom: 3px solid var(--secondary-color); transition: all 0.3s;">
+                    User Login
+                </button>
+                <button id="tab-admin" onclick="switchTab('admin')"
+                    style="flex: 1; padding: 1rem; border: none; background: none; font-weight: 600; color: #94a3b8; cursor: pointer; border-bottom: 3px solid transparent; transition: all 0.3s;">
+                    Admin Login
+                </button>
             </div>
 
-            <div class="mb-4">
-                <label for="email" style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Email
-                    Address</label>
-                <input type="email" id="email" required
-                    style="width: 100%; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: 0.5rem;">
+            <h2 class="text-center mb-4" id="login-title">User Login</h2>
+
+            <div id="error-message" class="alert alert-danger"
+                style="display: none; color: var(--danger-color); text-align: center; margin-bottom: 1rem;"></div>
+
+            <form id="login-form">
+                <div class="mb-4">
+                    <label for="email" style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Email
+                        Address</label>
+                    <input type="email" id="email" class="form-control" required
+                        style="width: 100%; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: 0.5rem;">
+                </div>
+                <div class="mb-4">
+                    <label for="password"
+                        style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Password</label>
+                    <input type="password" id="password" class="form-control" required
+                        style="width: 100%; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: 0.5rem;">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block" style="width: 100%;">Login</button>
+            </form>
+
+            <div class="text-center mt-4" id="register-link-container">
+                <p style="font-size: 0.9rem;">New to SmartPark? <a href="register.html"
+                        style="color: var(--secondary-color); font-weight: 600;">Create an account</a></p>
             </div>
-
-            <div class="mb-4">
-                <label for="password" style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Password</label>
-                <input type="password" id="password" required
-                    style="width: 100%; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: 0.5rem;">
-            </div>
-
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
-
-            <p class="mt-4 text-center" style="font-size: 0.9rem;">
-                Don't have an account? <a href="register.html"
-                    style="color: var(--primary-color); font-weight: 600;">Register here</a>
-            </p>
-        </form>
+        </div>
     </div>
 
     <footer class="footer">
@@ -63,15 +75,58 @@
 
     <script src="js/auth.js"></script>
     <script>
+        // State
+        let currentRole = 'user';
+
+        // Tab Switcher
+        function switchTab(role) {
+            currentRole = role;
+            const userTab = document.getElementById('tab-user');
+            const adminTab = document.getElementById('tab-admin');
+            const title = document.getElementById('login-title');
+            const regLink = document.getElementById('register-link-container');
+            const errorDiv = document.getElementById('error-message');
+
+            // Clear errors on switch
+            errorDiv.style.display = 'none';
+
+            if (role === 'admin') {
+                userTab.style.borderBottomColor = 'transparent';
+                userTab.style.color = '#94a3b8';
+
+                adminTab.style.borderBottomColor = 'var(--secondary-color)';
+                adminTab.style.color = 'var(--text-color)';
+
+                title.textContent = 'Admin Login';
+                regLink.style.display = 'none'; // Admins don't register here
+            } else {
+                adminTab.style.borderBottomColor = 'transparent';
+                adminTab.style.color = '#94a3b8';
+
+                userTab.style.borderBottomColor = 'var(--secondary-color)';
+                userTab.style.color = 'var(--text-color)';
+
+                title.textContent = 'User Login';
+                regLink.style.display = 'block';
+            }
+        }
+
+        // Handle Login
         document.getElementById('login-form').addEventListener('submit', (e) => {
             e.preventDefault();
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-            const errorDiv = document.getElementById('error-msg');
+            const errorDiv = document.getElementById('error-message');
 
-            const result = Auth.login(email, password);
+            // Pass currentRole to auth.js
+            const result = Auth.login(email, password, currentRole);
+
             if (result.success) {
-                window.location.href = 'dashboard.html';
+                if (result.user.role === 'admin') {
+                    window.location.href = 'admin.html';
+                } else {
+                    window.location.href = 'dashboard.html';
+                }
             } else {
                 errorDiv.textContent = result.message;
                 errorDiv.style.display = 'block';
