--- a/admin.html
+++ b/admin.html
@@ -142,6 +142,7 @@
         <p>&copy; 2026 SmartPark. All rights reserved.</p>
     </footer>
 
+    <script src="js/auth.js"></script>
     <script src="js/admin.js"></script>
 </body>
 
