Feat: Add Dynamic Pricing and EV Parking Slots

--- a/booking.html
+++ b/booking.html
@@ -67,6 +67,14 @@
                 </select>
             </div>
 
+            <div class="mb-4"
+                style="background: var(--background-color); padding: 1rem; border-radius: 0.5rem; text-align: center;">
+                <label style="display: block; margin-bottom: 0.25rem; font-weight: 600; color: var(--text-light);">Total
+                    Price</label>
+                <div style="font-size: 2rem; font-weight: 700; color: var(--secondary-color);">$<span
+                        id="price-amount">0</span></div>
+            </div>
+
             <button type="submit" class="btn btn-primary btn-block">Proceed to Payment</button>
         </form>
     </div>
